[tool.poetry]
name = "sanlms"
version = "0.1.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsktoolbox = "^1.0.15"
flask = "^3.0.2"
pysqlite3 = "^0.5.2"
pymysql = "^1.1.0"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
