[tool.poetry]
name = "sanlms"
version = "1.0.0"
description = ""
authors = ["Jacek Kotlarski <szumak@virthost.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jsktoolbox = "^1.0.15"
flask = "^3.0.2"
pymysql = "1.1.1"
flask-sqlalchemy = "^3.1.1"
flask-wtf = "^1.2.1"
flask-login = "^0.6.3"
mt-940 = "^4.30.0"
requests = "^2.32.0"
gunicorn = "^22.0.0"
werkzeug = "^3.0.6"
certifi = "^2024.07.04"
jinja2 = "^3.1.5"
urllib3 = "^2.2.2"
zipp = "^3.19.1"


[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
pytest = "^8.0.1"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
